--- a/blacklist-porn.example
+++ b/blacklist-porn.example
@@ -5,4 +5,4 @@
 # update process. For example, uncomment the following line to block
 # 'example.com':
 
-# 0.0.0.0 example.com
+0.0.0.0 www.xnxx.es
